--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
     <a href="http://example.org/" class="f3 fw2 hover-white no-underline white-90 dib">
-      My New Hugo Site
+      Bernardtm GitHub Page
     </a>
     <div class="flex-l items-center">
       
@@ -91,7 +91,7 @@
 
       <div class="tc-l pv3 ph3 ph4-ns">
         <h1 class="f2 f-subheadline-l fw2 light-silver mb0 lh-title">
-          My New Hugo Site
+          Bernardtm GitHub Page
         </h1>
         
       </div>
@@ -116,7 +116,7 @@
     <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
   <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="http://example.org/" >
-    &copy; 2019 My New Hugo Site
+    &copy; 2019 Bernardtm GitHub Page
   </a>
     <div>
 
