--- a/beginner.html
+++ b/beginner.html
@@ -51,7 +51,7 @@
           <a class="nav-link" href="beginner.html">Beginner</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Repositories</a>
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
@@ -69,16 +69,9 @@
   <main role="main" class="container">
 
     <div class="starter-template">
-      <h1>Welcome to my personal page!</h1>
-      <p class="lead">My name is Bernard and I started working as a developer in the beginning of 2018.<br/>
-        I learned a lot in my first job as a developer (Git, Java RestEasy, VueJS, Jenkins, Couchdb, Redis, Golang, Maven, Springboot, docker, kubernetes).<br/>
-        Later, on the next job I learned more (ReactJS and NodeJS), and I also started studying the cloud providers (mainly AWS).<br/>
-        I had some more experience with Jenkins (using Jenkins shared library) and Openshift.<br/>
+      <h1>I hope to give some hint for beginners here!</h1>
+      <p class="lead">
       </p>
-    </div>
-
-    <div class="starter-template alert alert-light" role="alert">
-      Navigation and search functions are intentionally not implemented.
     </div>
 
   </main><!-- /.container -->
