--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Bernardtm - Portfolio</title>
+  <meta name="description" content="Página de portfólio de Bernard Mendes.">
+  <meta name=”robots” content="index, follow">
+  <meta charset=UTF-8">
 
   <style>
     body {
