add social links

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 
 <body onload="loadTheMatrix()">
   <main role="main" class="container" id="terminal" >
-    > <span id="demo"></span><span class="blink">_</span>
+    <h1 style="font-size: 20px;">
+      > <span id="demo"></span><span class="blink">_</span>
+    </h1>
   </main>
 
   <main role="main" class="container" id="terminal" >
@@ -79,6 +81,8 @@
       <span id="skill5"></span><br/>
       <span id="skill5pct"></span>
     </p>
+    <a href="https://github.com/bernardtm">GitHub</a>
+    <a href="https://linkedin.com/in/bernard-mendes-dev">LinkedIn</a>
   </main>
 <script>
   function typeWriter(elementId, text, runAfter) {
