--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <meta charset="UTF-8">
   <link rel="shortcut icon" href="icon.png" />
   <link rel="apple-touch-icon" href="icon.png">
+  <link rel="canonical" href="http://bernardtm.github.io">
 
   <style>
     body {
