--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta charset="UTF-8">
   <link rel="shortcut icon" href="icon.png" />
   <link rel="apple-touch-icon" href="icon.png">
-  <link rel="canonical" href="http://bernardtm.github.io">
+  <link rel="canonical" href="https://bernardtm.github.io/">
 
   <style>
     body {
