--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta charset="UTF-8">
   <link rel="shortcut icon" href="icon.png" />
   <link rel="apple-touch-icon" href="icon.png">
-  <link rel="canonical" href="https://bernardtm.github.io/">
+  <link rel="canonical" href="https://bernardtm.github.io">
 
   <style>
     body {
@@ -82,8 +82,9 @@
       <span id="skill5"></span><br/>
       <span id="skill5pct"></span>
     </p>
-    <a href="https://github.com/bernardtm">GitHub</a>
-    <a href="https://linkedin.com/in/bernard-mendes-dev">LinkedIn</a>
+    <p><a href="https://github.com/bernardtm">GitHub</a></p>
+    <p><a href="https://linkedin.com/in/bernard-mendes-dev">LinkedIn</a></p>
+    <p><a href="#">Ir para o topo /\</a></p>
   </main>
 <script>
   function typeWriter(elementId, text, runAfter) {
