service worker test

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <link rel="shortcut icon" href="icon.png" />
   <link rel="apple-touch-icon" href="icon.png">
   <link rel="canonical" href="https://bernardtm.github.io">
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="manifest.json">
   <amp-install-serviceworker
 	src="/sw.js"
 	data-iframe-src="https://ampbyexample.com/sw.html"
