service worker test

--- a/index.html
+++ b/index.html
@@ -2,6 +2,23 @@
 <html lang="en">
 
 <head>
+<!-- Service Worker Reference -->
+<script>
+if ('serviceWorker' in navigator) {
+    navigator.serviceWorker
+        .register('/sw.js', { scope: '/' })
+        .then(() => {
+            console.info('Developer for Life Service Worker Registered');
+        }, err => console.error("Developer for Life Service Worker registration failed: ", err));
+
+    navigator.serviceWorker
+        .ready
+        .then(() => {
+            console.info('Developer for Life Service Worker Ready');
+        });
+}
+</script>
+
 <!-- Hotjar Tracking Code for https://bernardtm.github.io -->
 <script>
     (function(h,o,t,j,a,r){
