--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@ if ('serviceWorker' in navigator) {
 </amp-install-serviceworker>
 <script>
 let deferredPrompt;
+const addBtn = document.querySelector('.add-button');
+addBtn.style.display = 'none';
 
 window.addEventListener('beforeinstallprompt', (e) => {
   // Prevent Chrome 67 and earlier from automatically showing the prompt
@@ -109,7 +111,11 @@ window.addEventListener('beforeinstallprompt', (e) => {
       font-size: 20px; 
       font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', 'sans-serif';
     }
-
+    .add-button {
+      position: absolute;
+      top: 1px;
+      left: 1px;
+    }
   </style>
 </head>
 
