--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@ if ('serviceWorker' in navigator) {
         <div><a onClick="changeContent('aboutme')">ABOUT ME</a></div>
         <div><a onClick="changeContent('links')">LINKS</a></div>
         <div><a onClick="changeContent('portfolio')">PORTFOLIO</a></div>
+        <div><a href="/bingo/">BINGO</a></div>
       </nav>
       <footer style="margin-top: 50px;">
         <div class="text-white" style="font-size: 12px;">
